--- a/form.html
+++ b/form.html
@@ -12,6 +12,7 @@
       <input type="text" name="postal_code">
       <input type="text" name="country">
       <input type="text" name="phone">
+        <button>Submit</button>
     </form>
 
   </body>
