--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Form</title>
+    <!-- scripts  -->
+    <script defer type="text/javascript" src="tingle.js"></script>
+    <script defer type="text/javascript" src="form.js"></script>
+    <!-- css -->
+    <link rel="stylesheet" href="tingle.css">
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <form>
