form build and little layout to work with

--- a/index.html
+++ b/index.html
@@ -11,15 +11,31 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <form>
-      <input type="text" name="business_name">
-      <input type="text" name="street">
-      <input type="text" name="state">
-      <input type="text" name="postal_code">
-      <input type="text" name="country">
-      <input type="text" name="phone">
-        <button>Submit</button>
-    </form>
+    <div class="wrapper">
+      <div class="mid">
+        <form>
+          <label>Business Name
+            <input type="text" name="business_name">
+          </label>
+          <label>Street Address
+            <input type="text" name="street">
+          </label>
+          <label>State
+            <input type="text" name="state">
+          </label>
+          <label>Postal Code
+            <input type="text" name="postal_code">
+          </label>
+          <label>Country
+            <input type="text" name="country">
+          </label>
+          <label>Phone Number
+            <input type="text" name="phone">
+          </label>
+          <button>Submit</button>
+        </form>
+      </div>
+    </div>
 
   </body>
 </html>
