playing with modal

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="wrapper">
       <div class="mid">
-        <form>
+        <form id="bizForm">
           <label>Business Name
             <input type="text" name="business_name">
           </label>
@@ -32,7 +32,7 @@
           <label>Phone Number
             <input type="text" name="phone">
           </label>
-          <button>Submit</button>
+          <button id="formButton">Submit</button>
         </form>
       </div>
     </div>
