double checking form elements before iterating handling

--- a/index.html
+++ b/index.html
@@ -15,22 +15,25 @@
       <div class="mid">
         <form id="bizForm">
           <label>Business Name
-            <input type="text" name="business_name">
+            <input type="text" name="business_name" id="formBiz">
           </label>
           <label>Street Address
-            <input type="text" name="street">
+            <input type="text" name="street" id="formStreet">
+          </label>
+          <label>City
+            <input type="text" name="state" id="formCity">
           </label>
           <label>State
-            <input type="text" name="state">
+            <input type="text" name="state" id="formState">
           </label>
           <label>Postal Code
-            <input type="text" name="postal_code">
+            <input type="text" name="postal_code" id="formPc">
           </label>
           <label>Country
-            <input type="text" name="country">
+            <input type="text" name="country" id="formCountry">
           </label>
           <label>Phone Number
-            <input type="text" name="phone">
+            <input type="text" name="phone" id="formPhone">
           </label>
           <button id="formButton">Submit</button>
         </form>
