making form and json object creation iterative, now on to making the iframe and URL display properly

--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
       <div class="mid">
         <form id="bizForm">
           <label>Business Name
-            <input type="text" name="business_name" id="formBiz">
+            <input type="text" name="business_name" id="business_name">
           </label>
           <label>Street Address
-            <input type="text" name="street" id="formStreet">
+            <input type="text" name="street" id="street">
           </label>
           <label>City
-            <input type="text" name="state" id="formCity">
+            <input type="text" name="city" id="city">
           </label>
           <label>State
-            <input type="text" name="state" id="formState">
+            <input type="text" name="state" id="state">
           </label>
           <label>Postal Code
-            <input type="text" name="postal_code" id="formPc">
+            <input type="text" name="postal_code" id="postal_code">
           </label>
           <label>Country
-            <input type="text" name="country" id="formCountry">
+            <input type="text" name="country" id="country">
           </label>
           <label>Phone Number
-            <input type="text" name="phone" id="formPhone">
+            <input type="text" name="phone" id="phone">
           </label>
           <button id="formButton">Submit</button>
         </form>
