hmm the url isn't recognizing the stringified json

--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
       <div class="mid">
         <form id="bizForm">
           <label>Business Name
-            <input type="text" name="business_name" id="business_name">
+            <input type="text" value="Walt's Radiator and Muffler" name="business_name" id="business_name">
           </label>
           <label>Street Address
-            <input type="text" name="street" id="street">
+            <input type="text" value="10735 Aurora Ave N" name="street" id="street">
           </label>
           <label>City
-            <input type="text" name="city" id="city">
+            <input type="text" value="Seattle" name="city" id="city">
           </label>
           <label>State
-            <input type="text" name="state" id="state">
+            <input type="text" value="Washington" name="state" id="state">
           </label>
           <label>Postal Code
-            <input type="text" name="postal_code" id="postal_code">
+            <input type="text" value="98133" name="postal_code" id="postal_code">
           </label>
           <label>Country
-            <input type="text" name="country" id="country">
+            <input type="text" value="USA" name="country" id="country">
           </label>
           <label>Phone Number
-            <input type="text" name="phone" id="phone">
+            <input type="text" value="206-361-4144" name="phone" id="phone">
           </label>
           <button id="formButton">Submit</button>
         </form>
